fix flancy test

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -75,6 +75,7 @@ jobs:
       - id: govulncheck
         uses: golang/govulncheck-action@v1
         with:
+          repo-checkout: false
           go-package: ./...
   docker:
     name: Build Docker image
